creusot/tests/should_fail/unsupported_binary_operations.rs
fn bit_and(a: u32, b: u32) -> u32 {
    a & b
}

fn bit_or(a: u32, b: u32) -> u32 {
    a | b
}

fn bit_xor(a: u32, b: u32) -> u32 {
    a ^ b
}
